rules/exposure-to-internet/test/success_with_ingress/input/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: default
spec:
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - args:
        - server
        image: argoproj/argocli:latest
        name: argo-server
