rules/exposure-to-internet/test/success_with_ingress/input/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
